force-app/main/default/objects/NDIS_Report__c/NDIS_Report__c.object-meta.xml
<CustomObject>
    <label>Report Wizard</label>
    <nameField>
        <displayFormat>REP-{00000}</displayFormat>
        <label>Report Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Wizards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>