force-app/main/default/objects/NDIS_Report__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NDIS_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>