force-app/main/default/objects/NDIS_Report__c/fields/NDIS_Report__c.field-meta.xml
<CustomField>
    <fullName>NDIS_Report__c</fullName>
    <label>Report Wizard</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>