force-app/main/default/objects/NDIS_Report__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Object Holding Session Planning Document</description>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Session Planning Wizard</relationshipLabel>
    <relationshipName>Report_Wizards</relationshipName>
    <type>Lookup</type>
</CustomField>